# cpp-native-application-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: application.cpp
app/src/: main.cpp
event/: PUF_event.cpp
include/event/: PUF_event.h
include/gui/common/: GUI_pixel.h  GUI_screen.h
include/gui/module/: GUI_renderer.h
include/gui/module/grid-render/: GUI_grid.h
include/gui/section/: GUI_section.h
include/gui/window/: GUI_window.h
include/puffin/: PUF_event.h  PUF_queue.h
middleware/include/event/: PUF_event.h
middleware/include/gui/: GUI_Handler.h  GUI_grid_renderer.h  GUI_renderer.h  GUI_screen.h  GUI_section.h
middleware/src/: GUI_pixel.cpp  GUI_renderer.cpp  GUI_screen.cpp  GUI_section.cpp  PUF_event.cpp
platform/include/: window.h
platform/include/sdl/: sdl_window.h
platform/src/: GUI_window.cpp  macMain.cpp  renderer_deprecated.cpp  unix.cpp
platform/src/sdl/: sdl_window.cpp
render/: renderer.cpp
src/: main  main.cpp
src/app/: application.cpp
src/event/: PUF_event.cpp
src/gui/: GUI_pixel.cpp  GUI_renderer.cpp  GUI_screen.cpp  GUI_section.cpp  GUI_window.cpp
src/puffin/: PUF_event.cpp
src/render/: pixel.cpp  renderer.cpp
window/: window.cpp
